# nanofs

./: CMakeLists.txt  CMakeListsZephyr.txt  Kconfig  README.md
examples/: CMakeLists.txt  example-buffer-storage.c  example.c  fake-storage.c  header.h  main.c  normal.c  test.c  test_earse.c  test_nerase.c  test_normal.c  test_op_times.c  test_reformat.c  utils.c
include/nanofs/: nanofs.h
src/: nanofs.c  nanofs.h  nanofs_internal.h
testlib/: CMakeLists.txt
